@@ -11,9 +11,7 @@ package org.eclipse.hawkbit.repository.event.remote;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.qameta.allure.Description;
 import io.qameta.allure.Feature;
@@ -28,17 +26,16 @@ import org.junit.jupiter.api.Test;
 
 @Feature("Component Tests - Repository")
 @Story("RemoteTenantAwareEvent Tests")
-public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
+class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     private static final String TENANT_DEFAULT = "DEFAULT";
     private static final String APPLICATION_ID_DEFAULT = "Node";
 
     @Test
     @Description("Verifies that a testMultiActionAssignEvent can be properly serialized and deserialized")
-    public void testMultiActionAssignEvent() {
-        final List<String> controllerIds = Arrays.asList("id0", "id1", "id2", "id3",
-                "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
-        final List<Action> actions = controllerIds.stream().map(this::createAction).collect(Collectors.toList());
+    void testMultiActionAssignEvent() {
+        final List<String> controllerIds = List.of("id0", "id1", "id2", "id3", "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
+        final List<Action> actions = controllerIds.stream().map(this::createAction).toList();
 
         final MultiActionAssignEvent assignEvent = new MultiActionAssignEvent(TENANT_DEFAULT, APPLICATION_ID_DEFAULT,
                 actions);
@@ -54,10 +51,9 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a MultiActionCancelEvent can be properly serialized and deserialized")
-    public void testMultiActionCancelEvent() {
-        final List<String> controllerIds = Arrays.asList("id0", "id1", "id2", "id3",
-                "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
-        final List<Action> actions = controllerIds.stream().map(this::createAction).collect(Collectors.toList());
+    void testMultiActionCancelEvent() {
+        final List<String> controllerIds = List.of("id0", "id1", "id2", "id3", "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
+        final List<Action> actions = controllerIds.stream().map(this::createAction).toList();
 
         final MultiActionCancelEvent cancelEvent = new MultiActionCancelEvent(TENANT_DEFAULT, APPLICATION_ID_DEFAULT,
                 actions);
@@ -73,7 +69,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a DownloadProgressEvent can be properly serialized and deserialized")
-    public void reloadDownloadProgessByRemoteEvent() {
+    void reloadDownloadProgressByRemoteEvent() {
         final DownloadProgressEvent downloadProgressEvent = new DownloadProgressEvent(TENANT_DEFAULT, 1L, 3L,
                 APPLICATION_ID_DEFAULT);
 
@@ -86,7 +82,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a TargetAssignDistributionSetEvent can be properly serialized and deserialized")
-    public void testTargetAssignDistributionSetEvent() {
+    void testTargetAssignDistributionSetEvent() {
 
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
@@ -101,7 +97,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
         final Action action = actionRepository.save(generateAction);
 
         final TargetAssignDistributionSetEvent assignmentEvent = new TargetAssignDistributionSetEvent(
-                action.getTenant(), dsA.getId(), Arrays.asList(action), serviceMatcher.getBusId(),
+                action.getTenant(), dsA.getId(), List.of(action), serviceMatcher.getBusId(),
                 action.isMaintenanceWindowAvailable());
 
         final TargetAssignDistributionSetEvent remoteEventProtoStuff = createProtoStuffEvent(assignmentEvent);
@@ -113,7 +109,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a TargetAssignDistributionSetEvent can be properly serialized and deserialized")
-    public void testCancelTargetAssignmentEvent() {
+    void testCancelTargetAssignmentEvent() {
 
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
@@ -138,9 +134,8 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
     }
 
     private Action createAction(final String controllerId) {
-        long id = 1;
         final JpaAction generateAction = new JpaAction();
-        generateAction.setId(id++);
+        generateAction.setId(1L);
         generateAction.setActionType(ActionType.FORCED);
         generateAction.setTarget(testdataFactory.createTarget(controllerId));
         generateAction.setStatus(Status.RUNNING);
@@ -150,18 +145,18 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
     private void assertTargetAssignDistributionSetEvent(final Action action,
             final TargetAssignDistributionSetEvent underTest) {
 
-        assertThat(underTest.getActions().size()).isEqualTo(1);
+        assertThat(underTest.getActions()).hasSize(1);
         final ActionProperties actionProperties = underTest.getActions().get(action.getTarget().getControllerId());
         assertThat(actionProperties).isNotNull();
-        assertThat(actionProperties).isEqualToComparingFieldByField(new ActionProperties(action));
+        assertThat(actionProperties).usingRecursiveComparison().comparingOnlyFields().isEqualTo(new ActionProperties(action));
         assertThat(underTest.getDistributionSetId()).isEqualTo(action.getDistributionSet().getId());
     }
 
     private void assertCancelTargetAssignmentEvent(final Action action, final CancelTargetAssignmentEvent underTest) {
-        assertThat(underTest.getActions().size()).isEqualTo(1);
+        assertThat(underTest.getActions()).hasSize(1);
         final ActionProperties actionProperties = underTest.getActions().get(action.getTarget().getControllerId());
         assertThat(actionProperties).isNotNull();
-        assertThat(actionProperties).isEqualToComparingFieldByField(new ActionProperties(action));
+        assertThat(actionProperties).usingRecursiveComparison().comparingOnlyFields().isEqualTo(new ActionProperties(action));
         assertThat(underTest.getActionPropertiesForController(action.getTarget().getControllerId())).isPresent();
     }
 }
